--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.title {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background: darkcyan;
   color: white;
+  padding: 10px 10px 10px 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.todo {
+  font-size: larger;
+  font-weight: 600;
+  color: green;
+  background-color: bisque;
+  border: 4px solid teal;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+  padding: 25px 20px 20px 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-group {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.add-input{ 
+  height: 35px;
+  width: 250px;
+  border: none;
+  border-radius: 10px;
+}
+
+.add-button {
+  border: none;
+  border-radius: 10px;
+  background-color: teal;
+  width: 120px;
+  color: #fff;
+  font-size: large;
+  font-weight: 700;
+  padding: 10px;
+}
+
+.todo-item{
+  width: 300px;
+  height: 200px;
+  border: none;
+  border-radius: 10px;
+  background-color: green;
+  font-size: larger;
+  color: white;
+  font-weight: 500;
+  padding: 10px;
 }
